--- a/PortfolioSite/scss/_home.scss
+++ b/PortfolioSite/scss/_home.scss
@@ -57,9 +57,8 @@
     align-items: center;
     text-align: center;
     background: 
-        linear-gradient(to right, rgba($primary-color, 0.1), rgba($primary-color, 0.3)),
         url('../dist/images/CV-transparent.png') center 5% no-repeat;
-    background-size: 90% 45%;
+    background-size: 270px 270px;
 
     #greeting {
         padding-top: 1.8rem;
@@ -92,6 +91,16 @@
         gap: .3rem;
         padding: 0 2rem;
         padding-top: 1.5rem;
+
+        @media only screen and (min-width: 767px) {
+          padding: 0 8rem;
+          padding-top: 1.5rem;
+        }
+
+        @media only screen and (min-width: 1000px) {
+          padding: 0 20%;
+          padding-top: 1.5rem;
+        }
 
         button {
             flex: 1;
@@ -138,4 +147,122 @@
             font-size: 1.3rem;
         }
     }
+
+    @keyframes popup {
+        0%{
+          transform: scale(1);
+        }
+        50%{
+          transform: scale(1.4);
+        }
+        60%{
+          transform: scale(1.1);
+        }
+        70%{
+          transform: scale(1.2);
+        }
+        80%{
+          transform: scale(1);
+        }
+        90%{
+          transform: scale(1.1);
+        }
+        100%{
+          transform: scale(1);
+        }
+      }
+
+    /* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    animation: popup 0.7s;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    border-radius: 15px;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    height: 80vh;
+    color: black;
+    position: relative;
+
+        .validate-form {
+
+            .wrap-input100 {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                gap: 1.3rem;
+
+                .label-input100 {
+                    color: $secondary-color;
+                }
+
+                .input100 {
+                    width: 100%;
+                    border: none;
+                    border-bottom: 1px solid $secondary-color;
+                    padding: 0.3rem 0.2rem;
+                }
+
+                #message {
+                    height: 80px;
+                }
+            }
+
+            .container-contact100-form-btn {
+                float: right;
+
+                .contact100-form-btn {
+                    padding: 0.5rem 1.5rem;
+                }
+            }
+
+           
+        }
+  }
+  
+  /* The Close Button */
+  .close {
+    color: $secondary-color;
+    font-size: 1.5rem;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+  }
+
+  .modal-header {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0rem;
+
+      p {
+          margin-top: 2rem;
+          margin-bottom: 1rem;
+          line-height: 50px;
+      }
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 }
