--- a/PortfolioSite/scss/main.scss
+++ b/PortfolioSite/scss/main.scss
@@ -1,4 +1,4 @@
-@import 'config', 'home', 'menu', 'about', 'projects', 'contact', 'experience', 'skills';
+@import 'config', 'home', 'menu', 'about', 'projects', 'contact', 'experience', 'skills', 'responsive';
 
 body {
     background: $primary-color;
