--- a/PortfolioSite/scss/_config.scss
+++ b/PortfolioSite/scss/_config.scss
@@ -21,6 +21,18 @@ $box-shadow: 0px 0px 50px $secondary-color;
     }
 }
 
+@mixin custom-425 {
+    @media screen and (min-width: 426px) {
+        @content;
+    }
+}
+
+@mixin custom-520 {
+    @media screen and (min-width: 520px) {
+        @content;
+    }
+}
+
 @mixin media-md {
     @media screen and (min-width: 768px) {
         @content;
