--- a/PortfolioSite/scss/_skills.scss
+++ b/PortfolioSite/scss/_skills.scss
@@ -1,4 +1,113 @@
+.menu-btn {
+    position: absolute;
+    z-index: 9;
+    right: 1rem;
+    top: 1rem;
+    height: 20px;
+    width: 28px;
+    cursor: pointer;
+    @include transition-ease;
 
+    .menu-btn-burger {
+        position: absolute;
+        right: 0;
+        top: .5rem;
+        width: 28px;
+        height: 3px;
+        background: set-text-color($primary-color);
+        @include transition-ease;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: -8px;
+            width: 28px;
+            height: 3px;
+            background: set-text-color($primary-color);
+            @include transition-ease;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 8px;
+            width: 28px;
+            height: 3px;
+            background: set-text-color($primary-color);
+            @include transition-ease;
+        }
+
+        &.open {
+            transform: rotate(720deg);
+            background: transparent;
+
+            &::before {
+                transform: rotate(45deg) translate(5px, 8px);
+            }
+
+            &::after {
+                transform: rotate(-45deg) translate(3px, -7px);
+            }
+        }
+    }
+}
+
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    opacity: 0.9;
+    visibility: hidden;
+
+    &.open {
+        visibility: visible;
+    }
+
+    .menu-nav {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        overflow: hidden;
+        background: $primary-color;
+        list-style: none;
+        padding-right: 1rem;
+        transform: translateY(-100%);
+        @include transition-ease;
+
+        &.open {
+            transform: translateY(0);
+        }
+
+        .menu-nav-item {
+            transform: translateX(100vw);
+            @include transition-ease;
+
+            &.open {
+                transform: translateX(0);
+            }
+
+            &.active > a {
+                color: $secondary-color;
+            }
+        }
+
+        .menu-nav-item {
+            font-size: 1.5rem;
+            text-transform: uppercase;
+            padding: 1.5rem 0;
+            font-weight: 300;
+            @include transition-ease;
+            transition-delay: 0.5s;
+
+            &:hover {
+                color: $secondary-color;
+            }
+        }
+    }
+}
 
 
 
@@ -36,12 +145,12 @@
 }
 
 .skills-list {
+    padding: 0 12%;
     padding-top: 2rem;
     padding-bottom: 3rem;
 }
 
 .skills-item {
-    width: 70%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -69,6 +178,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background: transparent;
 
     .progress-bar {
         display: flex;
@@ -90,4 +200,8 @@
     i {
         font-size: 1.3rem;
     }
+}
+
+.text-secondary {
+    color: #ff652f !important;
 }
